--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,8 @@ jobs:
 
       - name: Deploy to EC2
         run: |
-          scp -i ${{ secrets.SSH_PRIVATE_KEY }} -r . ec2-user@${{ secrets.EC2_IP }}:/home/ec2-user/app
-          ssh -i ${{ secrets.SSH_PRIVATE_KEY }} ec2-user@${{ secrets.EC2_IP }} << 'EOF'
-            cd /home/ec2-user/app
+          scp -i ${{ secrets.SSH_PRIVATE_KEY }} -r . ubuntu@${{ secrets.EC2_IP }}:/home/ubuntu/app
+          ssh -i ${{ secrets.SSH_PRIVATE_KEY }} ubuntu@${{ secrets.EC2_IP }} << 'EOF'
+            cd /home/ubuntu/app
             nohup python3 app.py &
           EOF
