removed dependency stage

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -15,10 +15,6 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
-
       - name: Deploy to EC2
         run: |
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > key.pem
@@ -27,6 +23,8 @@ jobs:
           scp -i key.pem -o StrictHostKeyChecking=no -r . ubuntu@${{ secrets.EC2_IP }}:/home/ubuntu/app
           ssh -i key.pem -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_IP }} << 'EOF'
             cd /home/ubuntu/app
+            rm key.pem
+            pip install -r requirements.txt
             nohup python3 app.py &
           EOF
- 
+
