--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,6 +25,6 @@ jobs:
             cd /home/ubuntu/app
             rm key.pem
             pip install -r requirements.txt
-            nohup python3 app.py &
+            nohup python3 app.py > app.log 2>&1 &
           EOF
 
